# gridify

./: README.md  demo.ipynb  pyproject.toml
src/polargrid/: __init__.py  core.py  utils.py
